--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -1,16 +1,20 @@
 <section id="leave" class="section leave-section">
   <div class="container">
-    <h2 class="section_title">
+    <h2 class="section__title">
       Leave an
-      <span class="section_title_span"> application </span>
+      <span class="section__title--span"> application </span>
     </h2>
-    <p class="section_subtitle">
+    <p class="section__subtitle">
       Please use the form below to contact us. Enter your name, email, and
       message and we'll get back to you shortly.
     </p>
     <div class="leave-content-group">
       <div class="leave__adv-box">
-        <img src="/assets/img/leave/student.png" alt="Student" />
+        <img
+          srcset="/assets/img/leave/Student@2x.webp 2x"
+          src="/assets/img/leave/Student.webp"
+          alt="Student"
+        />
 
         <p class="leave__abv-box__text-accent">1000</p>
         <p class="leave__abv-box__text">
@@ -20,18 +24,18 @@
         </p>
       </div>
       <form class="leave-section-form" method="post">
-        <input class="leave-section-input" type="text" placeholder="Name" />
-        <input class="leave-section-input" type="email" placeholder="Email" />
-        <input class="leave-section-input" type="tel" placeholder="Phone" />
+        <input class="leave-section__input" type="text" placeholder="Name" />
+        <input class="leave-section__input" type="email" placeholder="Email" />
+        <input class="leave-section__input" type="tel" placeholder="Phone" />
         <textarea
-          class="leave-section-textarea"
+          class="leave-section__textarea"
           name="comment"
           id="comment"
           placeholder="Comment"
         ></textarea>
         <fieldset class="leave-section-rb-fieldset">
           <legend class="leave-section-rb-title">Choose a teacher</legend>
-          <div class="leave-section-rd-box">
+          <div class="leave-section__rb-box">
             <div>
               <input
                 class="leave__radio-btn__input visually-hidden"
@@ -55,7 +59,7 @@
                 Maria
               </label>
             </div>
-            <div class="leave-section-rd-box">
+            <div class="leave-section__rb-box">
               <div>
                 <input
                   class="leave__radio-btn__input visually-hidden"
@@ -79,7 +83,7 @@
                 </label>
               </div>
             </div>
-            <div class="leave-section-rd-box">
+            <div class="leave-section__rb-box">
               <div>
                 <input
                   class="leave__radio-btn__input visually-hidden"
@@ -103,7 +107,7 @@
                 </label>
               </div>
             </div>
-            <div class="leave-section-rd-box">
+            <div class="leave-section__rb-box">
               <div>
                 <input
                   class="leave__radio-btn__input visually-hidden"
