--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -129,7 +129,7 @@
           <a class="privacy-link small-text" href="/privacy-policy"
             >Privacy Policy</a
           >
-          <a class="our-team-link small-text" href="#">Our Team</a>
+          <a class="our-team-link small-text" href="team.html">Our Team</a>
         </div>
       </div>
       </p>
