--- a/src/css/components/proposal.css
+++ b/src/css/components/proposal.css
@@ -22,6 +22,7 @@
         line-height: 1.05;
         width: 295px;
         letter-spacing: 0em;
+        padding: 0;
     }
 
     .proposal__wrapper-full .proposal__accent {
@@ -49,7 +50,7 @@
     }
 
     .proposal__wrapper-full .proposal__header-th {
-        color: var(--primary-text-color);
+        color: var(--const-primary-text-color);
         font-size: 20px;
         font-weight: 700;
         line-height: 1.2;
@@ -83,12 +84,14 @@
     }
 
     .proposal__wrapper-full .proposal__paragraph-eng-pack {
-        color: var(--primary-text-color);
+        color: var(--const-primary-text-color);
         font-size: 14px;
         font-weight: 700;
         line-height: 1.43;
         letter-spacing: -0.02em;
+        padding: 0;
     }
+
 
     .proposal__first-extrabg-wrapper .proposal__first-extrabg-image {
         display: none;
@@ -175,6 +178,7 @@
         width: 640px;
         margin-left: 14px;
         margin-right: 14px;
+        padding: 0;
         
     }
 
@@ -204,11 +208,12 @@
     }
 
     .proposal__wrapper-full .proposal__header-th {
-        color: var(--primary-text-color);
+        color: var(--const-primary-text-color);
         font-size: 40px;
         font-weight: 700;
         line-height: 1.2;
         letter-spacing: -0.02em;
+        padding: 0;
     }
 
     .proposal__first-extrabg-wrapper .proposal__list-eng-pack {
@@ -242,11 +247,12 @@
     }
 
     .proposal__wrapper-full .proposal__paragraph-eng-pack {
-        color: var(--primary-text-color);
+        color: var(--const-primary-text-color);
         font-size: 20px;
         font-weight: 700;
         line-height: 1.2;
         letter-spacing: -0.02em;
+        padding: 0;
     }
 
     .proposal__first-extrabg-wrapper .proposal__first-extrabg-image {
@@ -333,6 +339,7 @@
         line-height: 1.17;
         width: 776px;
         letter-spacing: 0em;
+        padding: 0;
     }
 
     .proposal__wrapper-full .proposal__accent {
@@ -368,11 +375,12 @@
     }
 
     .proposal__wrapper-full .proposal__header-th {
-        color: var(--primary-text-color);
+        color: var(--const-primary-text-color);
         font-size: 40px;
         font-weight: 700;
         line-height: 1.2;
         letter-spacing: -0.02em;
+        padding: 0;
     }
 
     .proposal__first-extrabg-wrapper .proposal__list-eng-pack {
@@ -402,11 +410,12 @@
     }
 
     .proposal__wrapper-full .proposal__paragraph-eng-pack {
-        color: var(--primary-text-color);
+        color: var(--const-primary-text-color);
         font-size: 20px;
         font-weight: 700;
         line-height: 1.2;
         letter-spacing: -0.02em;
+        padding: 0;
     }
 
     .proposal__first-extrabg-wrapper .proposal__first-extrabg-image {
