fix text color in cards

--- a/src/css/components/about-us.css
+++ b/src/css/components/about-us.css
@@ -71,7 +71,7 @@
   font-weight: 700;
   line-height: 1.33;
   letter-spacing: -0.02em;
-  color: var(--primary-text-color);
+  color: var(--const-primary-text-color);
 }
 
 .about-us__img-wrap {
