--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,16 +5,9 @@
         Discover the joy of learning
         <span class="hero__title--accent">English</span> with us!
       </h1>
-      <a class="link link__leave-an-application" href="#leave"
-        >Leave an application</a
-      >
+      <a class="link link__leave-an-application" href="#leave">Leave an application</a>
       <a class="link hero__scroll" href="#footer">
-        <svg
-          class="hero__scroll--down"
-          width="20"
-          height="20"
-          aria-label="scroll down icon"
-        >
+        <svg class="hero__scroll--down" width="20" height="20" aria-label="scroll down icon">
           <use href="/public/icons.svg#icon-arrow"></use>
         </svg>
       </a>
