--- a/src/css/components/about-us.css
+++ b/src/css/components/about-us.css
@@ -1,9 +1,3 @@
-@media (min-width: 1280px) {
-  .section.about-us__section {
-    padding-top: var(--section-about-padding-top-desktop);
-  }
-}
-
 .section__subtitle--center {
   @media (min-width: 768px) {
     width: 658px;
@@ -43,7 +37,7 @@
 .about-us_list__item {
   padding: 32px;
   border-radius: 16px;
-  background: var(--about-us-card-bg-color);
+  background: var(--box-bg-color);
 
   @media (min-width: 768px) {
     width: 336px;
@@ -71,7 +65,7 @@
   font-weight: 700;
   line-height: 1.33;
   letter-spacing: -0.02em;
-  color: var(--const-primary-text-color);
+  color: var(--primary-text-color);
 }
 
 .about-us__img-wrap {
