--- a/src/css/components/lessons.css
+++ b/src/css/components/lessons.css
@@ -1,71 +1,16 @@
-.lessons__title {
-  color: var(--primary-text-color);
-  text-align: center;
-  font-family: 'Manrope', sans-serif;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.2;
-  /* 120% */
-  letter-spacing: -0.8px;
-  margin-bottom: 16px;
-}
-
-.lessons__title-span {
-  position: relative;
-}
-
-.lessons__title-span:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 20px;
-  background: var(--highlight-color);
-  border-radius: 50px;
-  bottom: 10%;
-  z-index: -1;
-}
-
-.lessons__title-text {
-  color: var(--secondary-text-color);
-  text-align: center;
-  font-family: var(--base-font);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.66;
-  /* 166.667% */
-  margin-bottom: 64px;
-}
-
-@media(max-width:1280px) {
-  .lessons__title-text {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
-
-@media(max-width:768px) {
-  .lessons__title-text {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
-
-
 .lessons__menu {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 32px;
 }
 
-@media(max-width:1280px) {
+@media (max-width: 1280px) {
   .lessons__menu {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media(max-width:768px) {
+@media (max-width: 768px) {
   .lessons__menu {
     grid-template-columns: 1fr;
   }
@@ -80,16 +25,14 @@
   border: 1px solid var(--accent-color);
 }
 
-@media(max-width:1280px) {
+@media (max-width: 1280px) {
   .lessons__items {
-
     padding: 32px 16px;
   }
 }
 
-@media(max-width:768px) {
+@media (max-width: 768px) {
   .lessons__items {
-
     padding: 32px 20px;
   }
 }
@@ -156,29 +99,30 @@
   font-style: normal;
   font-weight: 700;
   line-height: 1.55;
+  text-align: center;
   /* 155.556% */
   padding: 16px 38px;
   border-radius: 12px;
   background-color: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--transition-time) var(--transition-effect);
   border: none;
   cursor: pointer;
 }
 
 .lessons__btn:hover,
 .lessons__btn:focus {
-  background-color: var(--darkgreen-button-color);
+  background-color: var(--dark-hover-color);
 }
 
 .lessons__btn--active {
   cursor: pointer;
   border: 1px solid var(--button-border-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--transition-time) var(--transition-effect);
 }
 
 .lessons__btn--active:hover,
 .lessons__btn--active:focus {
   outline: none;
-  background-color: var(--main-bg-color);
+  background-color: var(--light-hover-color);
   color: var(--accent-color);
 }
