--- a/src/css/components/team.css
+++ b/src/css/components/team.css
@@ -1,4 +1,3 @@
-
 .team__cards {
   position: relative;
   display: flex;
@@ -31,7 +30,8 @@
   border-radius: 30px;
   box-shadow: inset 0px 0px 0px 1px var(--input-border-color);
   position: relative;
-  transition: transform var(--transition-time) var(--transition-effect), box-shadow var(--transition-time) var(--transition-effect);
+  transition: transform var(--transition-time) var(--transition-effect),
+    box-shadow var(--transition-time) var(--transition-effect);
 }
 .team__cards-container .team__cards__card-container:before {
   content: '';
@@ -53,7 +53,7 @@
   flex-direction: column;
   position: relative;
   border-radius: 30px;
-  background-color: var(  --box-bg-color);
+  background-color: var(--box-bg-color);
 }
 .team__cards-container .team__cards__card-container .card .bg {
   position: absolute;
@@ -152,7 +152,7 @@
   position: absolute;
   margin-top: 16px;
   transform: translateY(50px);
-  transition: all 0.3s ease;
+  transition: all var(--transition-time) var(--transition-effect);
 }
 .team__cards-container .team__cards__card-container .card .text .name {
   font-size: 20px;
@@ -204,17 +204,38 @@
   cursor: pointer;
   transition: opacity var(--transition-time) var(--transition-effect);
 }
-body.dark .team__cards-container .team__cards__card-container .card .social .icons .icon {
+body.dark
+  .team__cards-container
+  .team__cards__card-container
+  .card
+  .social
+  .icons
+  .icon {
   filter: brightness(2);
 }
-.team__cards-container .team__cards__card-container .card .social .icons .icon:hover {
+.team__cards-container
+  .team__cards__card-container
+  .card
+  .social
+  .icons
+  .icon:hover {
   opacity: 1;
 }
-.team__cards-container .team__cards__card-container .card .social .icons .icon img {
+.team__cards-container
+  .team__cards__card-container
+  .card
+  .social
+  .icons
+  .icon
+  img {
   width: 100%;
   height: 100%;
 }
-.team__cards-container .team__cards__card-container .card .social:hover .pointer {
+.team__cards-container
+  .team__cards__card-container
+  .card
+  .social:hover
+  .pointer {
   opacity: 1;
   bottom: 45px;
 }
@@ -246,11 +267,17 @@ body.dark .team__cards-container .team__cards__card-container .card .social .ico
 .team__cards-container .team__cards__card-container.show-more .card .more {
   transform: rotate(45deg) scale(1);
 }
-.team__cards-container .team__cards__card-container.show-more .card .more:hover {
+.team__cards-container
+  .team__cards__card-container.show-more
+  .card
+  .more:hover {
   transform: rotate(45deg) scale(1.1);
 }
 @media screen and (max-width: 767px) {
-  .team__cards-container .team__cards__card-container.show-more .card .more:hover {
+  .team__cards-container
+    .team__cards__card-container.show-more
+    .card
+    .more:hover {
     transform: rotate(45deg) scale(1);
   }
 }
@@ -263,10 +290,18 @@ body.dark .team__cards-container .team__cards__card-container .card .social .ico
   transition: all var(--transition-time) var(--transition-effect);
 }
 .team__cards-container .team__cards__card-container.show-more .card .text .name,
-.team__cards-container .team__cards__card-container.show-more .card .text .role {
+.team__cards-container
+  .team__cards__card-container.show-more
+  .card
+  .text
+  .role {
   color: var(--white-color);
 }
-.team__cards-container .team__cards__card-container.show-more .card .text .desc {
+.team__cards-container
+  .team__cards__card-container.show-more
+  .card
+  .text
+  .desc {
   display: block;
 }
 .team__cards-container .team__cards__card-container.show-more .card .photo {
@@ -278,11 +313,17 @@ body.dark .team__cards-container .team__cards__card-container .card .social .ico
   transform: translateY(0px);
   transition: all var(--transition-time) var(--transition-effect);
 }
-.team__cards-container .team__cards__card-container.show-more .card .photo:before {
+.team__cards-container
+  .team__cards__card-container.show-more
+  .card
+  .photo:before {
   height: 100%;
   opacity: 0.5;
 }
-.team__cards-container .team__cards__card-container.show-more .card .photo:after {
+.team__cards-container
+  .team__cards__card-container.show-more
+  .card
+  .photo:after {
   height: 100%;
   opacity: 0.8;
   border-radius: 4px;
@@ -290,7 +331,10 @@ body.dark .team__cards-container .team__cards__card-container .card .social .ico
 .team__cards-container .team__cards__card-container.show-more .card .photo img {
   filter: grayscale(100%);
 }
-.team__cards-container .team__cards__card-container.show-more .card .photo:hover {
+.team__cards-container
+  .team__cards__card-container.show-more
+  .card
+  .photo:hover {
   transform: translateY(0px);
 }
 .team__cards-container .team__cards__card-container.show-more .card .bg {
