--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -2,8 +2,9 @@
   padding: 20px 0px;
   position: sticky;
   top: 0;
-  background-color:  var(--header-bg-color);
+  background-color: var(--header-bg-color);
   z-index: 99;
+  transition: var(--transition-time) var(--transition-effect);
 }
 .header__wrapper {
   display: flex;
@@ -17,6 +18,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  transition: var(--transition-time) var(--transition-effect);
 }
 .logo--accent {
   color: var(--accent-color);
@@ -92,4 +94,8 @@
   .header__btn {
     display: none;
   }
+}
+
+.header__btn svg {
+  stroke: var(--primary-text-color);
 }
