--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -10,7 +10,8 @@
   --box-bg-color: #f3f5f6;
   --input-border-color: rgba(18, 20, 23, 0.1);
   --button-border-color: rgba(255, 255, 255, 0.4);
-  --darkgreen-button-color: #38AE5F;
+  --dark-hover-color: #38ae5f;
+  --light-hover-color: #fff;
   --bg-accent-color: rgba(255, 255, 255, 0.5);
   --footer-bg-color: #121417;
   --main-bg-color: #ffffff;
@@ -20,7 +21,6 @@
   --social-border-color: rgba(255, 255, 255, 0.1);
   --white-color-half-alpha: rgba(255, 255, 255, 0.5);
   --header-bg-color: rgba(255, 255, 255, 0.7);
-  --about-us-card-bg-color: #F3F5F6;
 
   /* Breakpoints */
   --mobile: 375px;
@@ -38,17 +38,7 @@
 
   /* Backdrop */
   --base-font: 'Manrope', sans-serif;
-
-  /* Section */
-  --section-padding-bottom-mobile: 80px;
-  --section-padding-bottom-tablet: 100px;
-  --section-padding-bottom-desktop: 150px;
-
-  --section-about-padding-top-mobile: 80px;
-  --section-about-padding-top-tablet: 100px;
-  --section-about-padding-top-desktop: 96px;
 }
-
 
 body.dark {
   --primary-text-color: #f5f5f5;
@@ -56,7 +46,6 @@ body.dark {
   --light-text-color: rgba(255, 255, 255, 0.7);
   --box-bg-color: #3e3e3e;
   --input-border-color: rgba(200, 200, 200, 0.1);
-  --button-border-color: rgba(45, 45, 45, 0.4);
   --main-bg-color: #262c27;
   --header-bg-color: rgba(38, 44, 39, 0.7);
 }
