--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,11 +6,19 @@
     <!-- Start desktop elements -->
     <nav>
       <ul class="header__nav__list">
-        <li><a class="nav__link" href="#about-us">About Us</a></li>
-        <li><a class="nav__link" href="#lessons">Our Lessons</a></li>
-        <li><a class="nav__link" href="#teachers">Teachers</a></li>
-        <li><a class="nav__link" href="#reviews">Reviews</a></li>
-        <li><a class="nav__link" href="#leave">Contact us</a></li>
+        <li>
+          <a class="link nav__link" href="#about-us">About Us</a>
+        </li>
+        <li>
+          <a class="link nav__link" href="#lessons">Our Lessons</a>
+        </li>
+        <li>
+          <a class="link nav__link" href="#teachers">Teachers</a>
+        </li>
+        <li><a class="link nav__link" href="#reviews">Reviews</a></li>
+        <li>
+          <a class="link nav__link" href="#leave">Contact us</a>
+        </li>
       </ul>
     </nav>
     <div>
