--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,12 +1,12 @@
 <section class="section lessons__section" id="lessons">
   <div class="container lessons__container">
-    <h2 class="lessons__title">
-      Our <span class="lessons__title-span">lessons</span>
+    <h2 class="section__title">
+      Our <span class="section__title--span">lessons</span>
     </h2>
-    <p class="lessons__title-text">
+    <p class="section__subtitle section__subtitle--center">
       Our lessonss are carefully structured and interactive, designed to promote
-      rapid<br />
-      language acquisition through practical tasks and real-world scenarios
+      rapid language acquisition through practical tasks and real-world
+      scenarios
     </p>
     <ul class="lessons__menu">
       <li class="lessons__items">
