--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -8,27 +8,33 @@
     <nav>
       <ul class="modal__nav__list">
         <li>
-          <a data-modal-close-link class="modal__nav__link" href="#about-us"
+          <a
+            data-modal-close-link
+            class="link modal__nav__link"
+            href="#about-us"
             >About Us</a
           >
         </li>
         <li>
-          <a data-modal-close-link class="modal__nav__link" href="#lessons"
+          <a data-modal-close-link class="link modal__nav__link" href="#lessons"
             >Our Lessons</a
           >
         </li>
         <li>
-          <a data-modal-close-link class="modal__nav__link" href="#teachers"
+          <a
+            data-modal-close-link
+            class="link modal__nav__link"
+            href="#teachers"
             >Teachers</a
           >
         </li>
         <li>
-          <a data-modal-close-link class="modal__nav__link" href="#reviews"
+          <a data-modal-close-link class="link modal__nav__link" href="#reviews"
             >Reviews</a
           >
         </li>
         <li>
-          <a data-modal-close-link class="modal__nav__link" href="#leave"
+          <a data-modal-close-link class="link modal__nav__link" href="#leave"
             >Contact us</a
           >
         </li>
