--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -42,13 +42,13 @@
       <img
         class="proposal__first-extrabg-image"
         srcset="
-        /assets/img/proposal/tall-stack-of-books.webp    1x,
-        /assets/img/proposal/tall-stack-of-books@2x.webp 2x
+          /assets/img/proposal/tall-stack-of-books.webp    1x,
+          /assets/img/proposal/tall-stack-of-books@2x.webp 2x
         "
         src="/assets/img/proposal/tall-stack-of-books.webp"
         alt="tall-stack-of-books"
       />
-      <a class="link proposal__cta" href="#leave">Leave an application</a>
+      <a class="proposal__cta" href="#leave">Leave an application</a>
     </div>
     <div class="proposal__second-extrabg"></div>
     <div class="proposal__third-extrabg"></div>
