--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,4 +1,4 @@
-<section class="section team__section">
+<section class="section team__section appear">
   <div class="container team__wrapper">
     <div class="team__wrapper">
       <h2 class="section__title team__title">
