--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,9 @@
 <header id="header" class="header">
   <div class="container header__wrapper">
     <div class="">
-      <p class="logo">english<span class="logo--accent">excellence</span>.</p>
+      <a href="index.html">
+        <p class="logo">english<span class="logo--accent">excellence</span>.</p>
+      </a>
     </div>
     <!-- Start desktop elements -->
     <nav>
@@ -80,8 +82,8 @@
 
     <!-- start mobile/tablet elements -->
     <div class="header__btn" data-modal-open type="button">
-      <svg width="32" height="32" aria-label="Instagram icon">
-        <use href="/public/Nav.svg#openNav"></use>
+      <svg class="open__icon" width="32" height="32">
+        <use href="/public/icons.svg#icon-nav-tablet"></use>
       </svg>
     </div>
   </div>
