--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -43,16 +43,20 @@
   line-height: 1.3;
   padding: 8px 0px;
 }
-.nav__link:hover::after,
-.nav__link:focus::after {
+.nav__link:after,
+.nav__link:after {
   content: ' ';
   position: absolute;
   bottom: 0;
   display: block;
-  width: 62%;
+  width: 0%;
   height: 2px;
   background-color: var(--accent-color);
-  /* border-bottom: 2px solid var(--accent-color); */
+}
+.nav__link:hover::after,
+.nav__link:focus::after {
+  width: 62%;
+  transition: width var(--transition-effect), var(--transition-time);
 }
 
 .header__social__list {
@@ -71,7 +75,6 @@
   display: flex;
   justify-content: center;
   border-radius: 10px;
-
   border: 1px solid var(--secondary-text-color);
   transition: border var(--transition-effect), var(--transition-time);
 }
@@ -98,4 +101,9 @@
 
 .header__btn svg {
   stroke: var(--primary-text-color);
+}
+.open__icon {
+  width: 32px;
+  height: 32px;
+  fill: var(--primary-text-color);
 }
