--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,8 +1,8 @@
 <div class="backdrop is-hidden" data-modal>
-  <div class="modal">
-    <div data-modal-close class="button-close">
-      <svg width="32" height="32" aria-label="Instagram icon">
-        <use href="/public/closeBTN.svg#closeNav"></use>
+  <div data-modal-content class="modal">
+    <div data-modal-close class="button-close" type="button">
+      <svg class="close__icon" width="32" height="32">
+        <use href="../assets/img/modal/closeBTN.svg#closeNav"></use>
       </svg>
     </div>
     <nav>
