--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -51,6 +51,34 @@ body::-webkit-scrollbar {
   width: 0;
 }
 
+/*custom scroll for desktop*/
+
+@media screen and (min-width: 1280px) {
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    background-color: var(--main-bg-color);
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+  }
+  body::-webkit-scrollbar {
+    width: 15px;
+    background-color: var(--main-bg-color);
+  }
+
+  body::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: var(--accent-color);
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+  }
+}
+
 body {
   background-color: var(--main-bg-color);
   transition: var(--transition-time) var(--transition-effect);
