--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -133,8 +133,7 @@
             </div>
           </div>
         </fieldset>
-        <button class="leave-section-btn" type="submit">Send</button>
-
+        <button class="leave-section-btn" type="button">Send</button>
         <p class="leave-section-btn-descr">
           By clicking on “Send” button, you agree to our Privacy Policy, and
           allow Promodo to use this information for marketing purposes.
