fix img path in modal.html

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,7 +2,7 @@
   <div data-modal-content class="modal">
     <div data-modal-close class="button-close" type="button">
       <svg class="close__icon" width="32" height="32">
-        <use href="../assets/img/modal/closeBTN.svg#closeNav"></use>
+        <use href="/assets/img/modal/closeBTN.svg#closeNav"></use>
       </svg>
     </div>
     <nav>
