fixes centered position of content in about-us

--- a/src/css/components/about-us.css
+++ b/src/css/components/about-us.css
@@ -7,6 +7,7 @@
 .about-us__wrapper {
   display: flex;
   gap: 20px;
+  justify-content: center;
 
   @media (max-width: 1279.98px) {
     flex-direction: column;
