fix-validator-check
Fixed proposal page to go through the validator

--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -46,8 +46,7 @@
           /assets/img/proposal/tall-stack-of-books@2x.webp 2x
         "
         src="/assets/img/proposal/tall-stack-of-books.webp"
-        alt="tall-stack-of-books"
-      />
+        alt="tall-stack-of-books" >
       <a class="proposal__cta" href="#leave">Leave an application</a>
     </div>
     <div class="proposal__second-extrabg"></div>
