fix: update teachers' image sizes and formats

--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -11,11 +11,25 @@
     <ul class="teachers-list list">
       <li class="teacher-list__item">
         <div class="avatar">
-          <img
-            srcset="/assets/img/teachers/Maria@2x.jpg 2x"
-            src="/assets/img/teachers/Maria.jpg"
-            alt="Maria"
-          />
+          <picture>
+            <source
+              srcset="
+                /assets/img/teachers/Maria.webp    1x,
+                /assets/img/teachers/Maria@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="/assets/img/teachers/Maria@2x.jpg 2x"
+              type="image/jpeg"
+            />
+            <img
+              src="/assets/img/teachers/Maria.jpg"
+              alt="Maria"
+              width="150"
+              height="150"
+            />
+          </picture>
         </div>
         <p class="name">Maria</p>
         <p class="skills">
@@ -25,11 +39,25 @@
       </li>
       <li class="teacher-list__item">
         <div class="avatar">
-          <img
-            srcset="/assets/img/teachers/Artem@2x.jpg 2x"
-            src="/assets/img/teachers/Artem.jpg"
-            alt="Artem"
-          />
+          <picture>
+            <source
+              srcset="
+                /assets/img/teachers/Artem.webp    1x,
+                /assets/img/teachers/Artem@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="/assets/img/teachers/Artem@2x.jpg 2x"
+              type="image/jpeg"
+            />
+            <img
+              src="/assets/img/teachers/Artem.jpg"
+              alt="Artem"
+              width="150"
+              height="150"
+            />
+          </picture>
         </div>
         <p class="name">Artem</p>
         <p class="skills">
@@ -39,11 +67,25 @@
       </li>
       <li class="teacher-list__item">
         <div class="avatar">
-          <img
-            srcset="/assets/img/teachers/Ilona@2x.jpg 2x"
-            src="/assets/img/teachers/Ilona.jpg"
-            alt="Ilona"
-          />
+          <picture>
+            <source
+              srcset="
+                /assets/img/teachers/Ilona.webp    1x,
+                /assets/img/teachers/Ilona@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="/assets/img/teachers/Ilona@2x.jpg 2x"
+              type="image/jpeg"
+            />
+            <img
+              src="/assets/img/teachers/Ilona.jpg"
+              alt="Ilona"
+              width="150"
+              height="150"
+            />
+          </picture>
         </div>
         <p class="name">Ilona</p>
         <p class="skills">
@@ -54,11 +96,25 @@
       </li>
       <li class="teacher-list__item">
         <div class="avatar">
-          <img
-            srcset="/assets/img/teachers/Volodymyr@2x.jpg 2x"
-            src="/assets/img/teachers/Volodymyr.jpg"
-            alt="Volodymyr"
-          />
+          <picture>
+            <source
+              srcset="
+                /assets/img/teachers/Volodymyr.webp    1x,
+                /assets/img/teachers/Volodymyr@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="/assets/img/teachers/Volodymyr@2x.jpg 2x"
+              type="image/jpeg"
+            />
+            <img
+              src="/assets/img/teachers/Volodymyr.jpg"
+              alt="Volodymyr"
+              width="150"
+              height="150"
+            />
+          </picture>
         </div>
         <p class="name">Volodymyr</p>
         <p class="skills">
